# Stormlicht

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  download.sh  meson.build  meson_options.txt  pyproject.toml  requirements.txt  rustfmt.toml  setup.py  stormlicht.py
browser/: Cargo.toml
browser/src/: browser_application.rs  main.rs
compression/: Cargo.toml  build.rs
compression/benches/: brotli.rs
compression/src/: bit_reader.rs  deflate.rs  gzip.rs  huffman.rs  lib.rs  ringbuffer.rs  zlib.rs
compression/src/brotli/: dictionary.rs  huffman.rs  mod.rs
compression/src/deflate/: mod.rs
compression/tests/: brotli.rs
crates/compression/: Cargo.toml
crates/compression/benches/: brotli.rs
crates/compression/src/: bit_reader.rs  deflate.rs  gzip.rs  huffman.rs  lib.rs  ringbuffer.rs  zlib.rs
crates/compression/src/brotli/: dictionary.rs  mod.rs
crates/compression/tests/: brotli.rs
crates/core/: Cargo.toml
crates/core/src/: browsing_context.rs  event.rs  interned_string.rs
crates/core/src/css/display_list/: command.rs
crates/core/src/css/selectors/: any_value.rs  compound_selector.rs  relative_real_selector.rs
crates/core/src/css/syntax/: parser.rs  tokenizer.rs
crates/core/src/css/values/: display.rs
crates/core/src/dom/dom_objects/: document.rs  html_anchor_element.rs  html_button_element.rs  (+3 more)
crates/core/src/html/: links.rs
crates/crypto/tls/: Cargo.toml  build.rs  object_identifiers.json  objects_xref.json
crates/crypto/tls/src/: alert.rs  cipher_suite.rs  connection.rs  encoding.rs  handshake.rs  lib.rs  random.rs  record_layer.rs  session.rs
crates/crypto/tls/testdata/: cert.pem
crates/dns/: Cargo.toml
crates/dns/src/: domain.rs  lib.rs  message.rs
crates/error-derive/: Cargo.toml
crates/error-derive/src/: lib.rs
crates/graphics/render/: Cargo.toml
crates/graphics/render/src/: composition.rs  layer.rs  path.rs  rasterizer.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs  request.rs  response.rs  status_code.rs
crates/http/src/headers/: cache_control.rs  mod.rs  utils.rs  value.rs
crates/ipc/: Cargo.toml
crates/ipc/examples/: ipc_setup.rs
crates/ipc/src/: lib.rs
crates/resourceloader/: Cargo.toml
crates/resourceloader/src/: lib.rs  loader.rs  resource.rs
crates/url/: Cargo.toml
crates/url/benches/: parse_url.rs
crates/url/src/: host.rs  ip.rs  lib.rs  parser.rs  path.rs  percent_encode.rs  set.rs  url.rs  util.rs
crates/url/tests/: parse_wpt.rs
crates/util/html-treebuilding-match/: Cargo.toml
crates/util/html-treebuilding-match/src/: lib.rs
crates/util/mime/: Cargo.toml
crates/util/mime/src/: lib.rs  metadata.rs  mime_type.rs  resource.rs  sniff.rs
crypto/hash/: Cargo.toml
crypto/hash/src/: adler32.rs  crc32.rs  md5.rs
crypto/tls/: Cargo.toml  object_identifiers.json
crypto/tls/src/: aes.rs  alert.rs  certificate.rs  cipher_suite.rs  connection.rs  der.rs  error_alert.rs  handshake.rs  lib.rs  random.rs  record_layer.rs  server_name.rs
crypto/tls/src/certificate/: identity.rs  mod.rs
crypto/tls/src/der/: integer.rs  item.rs  mod.rs  object_identifier.rs  sequence.rs
font/: Cargo.toml
font/src/: bezier.rs  font.rs  lib.rs  path.rs  rasterizer.rs  stream.rs  target.rs  ttf.rs
font/src/tables/: cmap.rs  glyf.rs  head.rs  hhea.rs  hmtx.rs  loca.rs  mod.rs  offset.rs
font/src/ttf/: mod.rs
font/src/ttf/tables/: cmap.rs  glyf.rs  head.rs  hmtx.rs  loca.rs  maxp.rs  mod.rs  name.rs
font/src/ttf_tables/: cmap.rs  glyf.rs  hhea.rs  hmtx.rs  loca.rs  maxp.rs  name.rs  offset.rs  vhea.rs
graphics/font/: Cargo.toml
graphics/font/src/: lib.rs  path.rs  rasterizer.rs  stream.rs  ttf.rs
graphics/font/src/sources/: mod.rs
graphics/font/src/ttf_tables/: cmap.rs  glyf.rs  head.rs  hmtx.rs  loca.rs  name.rs
gui/: Cargo.toml  README.md
gui/canvas/: Cargo.toml
gui/canvas/src/: canvas.rs  lib.rs  pixel_format.rs
gui/src/: cmap.rs  color.rs  events.rs  lib.rs  main.rs  pixelbuffer.rs  primitives.rs  quad_bezier.rs  surface.rs  texture.rs  ttf.rs
gui/src/events/: keyboard.rs  mod.rs
gui/src/layout/: divider.rs  mod.rs  widget.rs
gui/src/layout/widgets/: colored_box.rs  input.rs  mod.rs
gui/src/tables/: cmap.rs  glyf.rs  head.rs  loca.rs  mod.rs
gui/src/wayland/: mod.rs  types.rs  wl_display.rs  wl_registry.rs
gui/widgets/: Cargo.toml
gui/widgets/src/: alignment.rs  application.rs  colorscheme.rs  lib.rs  pixelbuffer.rs  primitives.rs
gui/widgets/src/layout/: container.rs  mod.rs  widget.rs
log/: Cargo.toml
log/src/: lib.rs  macros.rs
stormlicht/: Cargo.toml  build.rs  meson.build
stormlicht/resources/: gresources.xml  meson.build  window.blp
stormlicht/src/: browser_application.rs  main.rs
stormlicht/src/chrome/: glazier.rs  mod.rs
stormlicht/src/chrome/gtk/: mod.rs  run.rs
util/cli-derive/: Cargo.toml
util/cli-derive/src/: lib.rs
util/perfect_hash/: Cargo.toml
util/perfect_hash/examples/: static_set.rs
util/perfect_hash/src/: lib.rs
web/core/: Cargo.toml  default.css
web/core/src/: browsing_context.rs  font_cache.rs  infra.rs  lib.rs  selection.rs  tree_debug.rs
web/core/src/css/: computed_style.rs  font_metrics.rs  line_break.rs  matching_rule.rs  mod.rs  parser.rs  properties.rs  rule_parser.rs  serialize.rs  stylecomputer.rs  stylesheet.rs  tokenizer.rs  tree.rs
web/core/src/dom/: boundary_point.rs  display.rs  dom_ptr.rs  mod.rs
web/html/: Cargo.toml  build.rs
web/html/src/: browsing_context.rs  character_reference.rs  dom.rs  dom_ptr.rs  infra.rs  lib.rs  parser.rs  tokenizer.rs
web/html/src/css/: parser.rs  rule_parser.rs  selectors.rs  tree.rs
web/html/src/dom/: dom_display.rs  dom_ptr.rs  mod.rs
web/html/src/tokenization/: character_reference.rs  tokenizer.rs
web/html/src/treebuilding/: active_formatting_elements.rs  mod.rs  parser.rs  stack_of_open_elements.rs
web/http/: Cargo.toml
web/http/src/: lib.rs  request.rs  response.rs  status_code.rs
web/http/src/compress/: bit_reader.rs  mod.rs  ringbuffer.rs
web/http/tests/: brotli.rs
(+898 files in other folders)
