[package]
name = "browser"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/wuelle/browser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widgets = { path = "../gui/widgets" }
canvas = { path = "../gui/canvas" }
image = { path = "../image" }
font = { path = "../font" }
cli = { path = "../util/cli" }
env_logger = "0.10"
log = "0.4"
anyhow = "1"