[package]
name = "browser"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/wuelle/browser"
default-run = "browser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { path = "../util/cli" }
env_logger = "0.10"
log = "0.4"
glazier = { git = "https://github.com/linebender/glazier" }
softbuffer = "0.2"
render = { path = "../graphics/render" }
math = { path = "../graphics/math" }
font = { path = "../graphics/font" }