[package]
name = "compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[dependencies]
anyhow = "1"
thiserror = "1"
hash = { path = "../hash" }

[[bench]]
name = "brotli"
harness = false