[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { path = "../log"}
font_rasterizer = { path = "../font_rasterizer" }
executor = { path = "../async/executor" }
http = { path = "../web/http" }
gtk = { version = "0.5", package = "gtk4", optional = true}

[features]
default = ["backend-wayland"]
backend-wayland = []
backend-gtk = ["dep:gtk"]
