[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { path = "../log"}
font_rasterizer = { path = "../font_rasterizer" }
gtk = { version = "0.5", package = "gtk4", optional = true}
generic = { path = "../backends/generic" }

[target]
[target.'cfg(windows)'.dependencies]
win32 = { path = "../backends/win32" }

[features]
default = []
backend-wayland = []
backend-gtk = ["dep:gtk"]
