[package]
name = "stormlicht"
version = "0.1.0"
default-run = "stormlicht"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
cli = { workspace = true }
log = { workspace = true }
render = { workspace = true }
math = { workspace = true }
web = { workspace = true }
url = { workspace = true }
image = { workspace = true }
sl-std = { workspace = true }

glazier = { git = "https://github.com/linebender/glazier", optional = true }
softbuffer = { version = "0.2", optional = true }

gtk = { package = "gtk4", version = "0.8", features = ["v4_10"], optional = true }
adw = { version = "0.6", package = "libadwaita", optional = true }

[features]
default = ["chrome-gtk"]
chrome-gtk = ["gtk", "adw"]
chrome-glazier = ["glazier", "softbuffer"]


[build-dependencies]
glib-build-tools = "0.18.0"

[lints]
workspace = true
