[package]
name = "stormlicht"
version = "0.1.0"
default-run = "stormlicht"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
cli = { workspace = true }
log = { workspace = true }
render = { workspace = true }
math = { workspace = true }
web = { workspace = true }
url = { workspace = true }
image = { workspace = true }
sl-std = { workspace = true }

[target.'cfg(chrome = "glazier")'.dependencies]
glazier = { git = "https://github.com/linebender/glazier" }
softbuffer = { version = "0.2"  }

[target.'cfg(chrome = "gtk")'.dependencies]
gtk = { package = "gtk4", version = "0.8", features = ["v4_10"] }
adw = { version = "0.6", package = "libadwaita" }

[target.'cfg(chrome = "gtk")'.build-dependencies]
glib-build-tools = "0.18.0"

[lints]
workspace = true
