[package]
name = "stormlicht"
version = "0.1.0"
default-run = "stormlicht"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
cli = { workspace = true }
log = { workspace = true }
render = { workspace = true }
math = { workspace = true }
web = { workspace = true }
url = { workspace = true }
image = { workspace = true }
sl-std = { workspace = true }
settings = { workspace = true }

# Glazier-only dependencies
glazier = { git = "https://github.com/linebender/glazier", optional = true }
softbuffer = { version = "0.2", optional = true }

# GTK-only dependencies
gtk = { package = "gtk4", version = "0.8", features = [
    "v4_10",
], optional = true }
adw = { version = "0.6", package = "libadwaita", optional = true }

[features]
default = ["chrome-gtk"]
chrome-gtk = ["dep:gtk", "dep:adw", "dep:glib-build-tools"]
chrome-glazier = ["dep:glazier", "dep:softbuffer"]


[build-dependencies]
glib-build-tools = { version = "0.18.0", optional = true }

[lints]
workspace = true
