[package]
name = "compression"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { workspace = true }

[dependencies]
hash = { workspace = true }
log = { workspace = true }
sl-std = { workspace = true }

[[bench]]
name = "brotli"
harness = false

[lints]
workspace = true
