[package]
name = "core"
version = "0.1.0"
build = "build/main.rs"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dom-derive = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
math = { workspace = true }
font = { workspace = true }
render = { workspace = true }
url = { workspace = true }
sl-std = { workspace = true }
perfect_hash = { workspace = true }
image = { workspace = true }

[build-dependencies]
buildutils = { workspace = true }
proc-macro2 = { workspace = true }
serialize = { workspace = true }
syn = "1"                          # FIXME: Update to syn 2

[lints]
workspace = true
