[package]
name = "http"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sl-std = { workspace = true }
url = { workspace = true }
dns = { workspace = true }
compression = { workspace = true }
log = { workspace = true }
error-derive = { workspace = true }
rustls = "0.22.2"
webpki-roots = "0.26.1"

[lints]
workspace = true
