[package]
name = "ipc"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
libc = { workspace = true }
log = { workspace = true }

[dev-dependencies]
log = { workspace = true }
env_logger = { workspace = true }

[lints]
workspace = true
