[package]
name = "hash"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { workspace = true }

[dependencies]

[[bench]]
name = "crc32"
harness = false

[[bench]]
name = "adler32"
harness = false
