[package]
name = "tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
ciphers = { path = "../ciphers" }
dns = { path = "../../web/dns" }
sl-std = { path = "../../sl-std" }

[build-dependencies]
serialize = { path = "../../util/serialization/serialize" }
