[package]
name = "font"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontconfig = { path = "../../sys/fontconfig" }
math = { path = "../math" }
log = "0.4"

[features]
default = ["fontconfig"]
fontconfig = []
