[package]
name = "font"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = { workspace = true }
log = { workspace = true }

[target.'cfg( target_os = "linux" )'.dependencies]
fontconfig = { workspace = true }