[package]
name = "cli-derive"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1"                          # FIXME: Update to syn 2
quote = { workspace = true }
proc-macro2 = { workspace = true }

[lib]
proc-macro = true
