[package]
name = "core"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dom-derive = { path = "../dom-derive"}
log = "0.4"
mime = { path = "../../util/mime" }
cssproperty-derive = { path = "../cssproperty-derive" }
string_interner = { path = "../../util/string_interner" }

[build-dependencies]
syn = "1"
proc-macro2 = "1"
serialize = { path = "../../util/serialization/serialize" }