[package]
name = "html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dom-derive = { path = "../dom-derive"}
log = "0.4"
mime = { path = "../../util/mime" }

[build-dependencies]
syn = "1"
proc-macro2 = "1"