[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser_combinators = { path = "../../parser_combinators" }
url = { path = "../url" }
dns = { path = "../dns" }
compression = { path = "../../compression" }
log = "0.4"
