[package]
name = "tls"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
ciphers = { workspace = true }
dns = { workspace = true }
sl-std = { workspace = true }

[build-dependencies]
serialize = { workspace = true }
serialize-json = { workspace = true }

[lints]
workspace = true
