[package]
name = "html-treebuilding-match"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true