[package]
name = "mime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { workspace = true }
http = { workspace = true }
sl-std = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
